--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,6 @@ repositories {
 }
 
 dependencies {
+    compile 'com.google.code.gson:gson:2.8.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
